Allow for configest
Now one may type in bin/configtest.sh and then check the 
exit code.

This will try to use the default loggers so it may spew 
"a lot" to stdout/err so as to avoid clobbering existing
log files in use.

Potential future todo 
- Making the parsing of server.xml more finicky as to avoid
  bad values being ignored (example - use 'x8005' as the
  shutdown port - and tomcat still starts up fine )




git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1031043 13f79535-47bb-0310-9956-ffa450edef68